bonus/confs/ingress.gitlab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress  # Name of the Ingress resource
  namespace: gitlab  # Namespace where the Ingress resource is created
  annotations:
    traefik.ingress.kubernetes.io/ssl-redirect: "false"  # Disable automatic SSL redirection by Traefik
spec:
  rules:
  - host: www.gitlab.local.com  # Hostname for the Ingress rule
    http:
      paths:
      - path: /  # Path to match for this rule
        pathType: Prefix  # Type of path matching
        backend:
          service:
            name: gitlab-webservice-default  # Name of the service to route traffic to
            port:
              number: 8181  # Port on the service to route traffic to
