bonus/confs/ingress.willapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appx-ingress  # Name of the Ingress resource
  namespace: dev  # Namespace where the Ingress resource is created
  annotations:
    traefik.ingress.kubernetes.io/ssl-redirect: "false"  # Disable automatic SSL redirection by Traefik
spec:
  rules:
  - host: www.willapp.local.com  # Hostname for the Ingress rule
    http:
      paths:
      - path: /  # Path to match for this rule
        pathType: Prefix  # Type of path matching
        backend:
          service:
            name: app1-service  # Name of the service to route traffic to
            port:
              number: 8888  # Port on the service to route traffic to
